--- a/index.html
+++ b/index.html
@@ -45,39 +45,42 @@
   <meta name="description" content="Sydney Electrical Pros - 24/7 Emergency Electrician in Sydney South West, Eastern Beaches & Inner City. Licensed, insured, residential & commercial via Woova.">
   <title>Sydney Electrical Pros</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-    header { background: #1e3a8a; color: white; padding: 1em 0; text-align: center; position: sticky; top: 0; }
-    header .logo { font-size: 1.5em; font-weight: bold; }
-    header nav { margin-top: 0.5em; }
-    header nav a { color: white; text-decoration: none; margin: 0 0.5em; }
-    .hero { background: #e0e7ff url('hero-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #1e3a8a; }
-    .hero h1 { font-size: 2.5em; margin-bottom: 0.5em; }
-    .hero p { font-size: 1.2em; }
-    .hero .contact-btn { margin-top: 1em; padding: 0.5em 1em; background: #ef4444; color: white; text-decoration: none; border-radius: 5px; }
-    .hero .phone { font-size: 1.5em; margin-top: 0.5em; }
-    .services { padding: 2em; text-align: center; background: #f9fafb; }
-    .services h2 { margin-bottom: 1em; color: #1e3a8a; }
-    .service-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1em; padding: 0 1em; }
-    .service-item { padding: 1.5em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; }
-    .contact { background: #1e3a8a; color: white; padding: 2em; text-align: center; }
-    .contact h2 { margin-bottom: 1em; }
-    .contact form { max-width: 100%; margin: 0 1em; }
-    .contact input, .contact textarea { width: 100%; margin-bottom: 1em; padding: 0.5em; border: none; border-radius: 5px; }
-    .contact button { padding: 0.5em 1em; background: #ef4444; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    .footer { background: #111827; color: white; padding: 1em 0; text-align: center; }
-    .footer a { color: #ef4444; text-decoration: none; margin: 0 0.5em; }
-    @media (max-width: 600px) {
-      .hero { height: 200px; }
-      .hero h1 { font-size: 1.5em; }
-      .hero p { font-size: 1em; }
-      .hero .phone { font-size: 1em; }
-      .service-grid { grid-template-columns: 1fr; padding: 0; }
-      header nav a { margin: 0 0.3em; }
-      .contact form { margin: 0; }
-    }
-  </style>
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+  body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
+  header { background: #1e3a8a; color: white; padding: 1em 0; text-align: center; position: sticky; top: 0; }
+  header .logo { font-size: 1.5em; font-weight: bold; }
+  header nav { margin-top: 0.5em; }
+  header nav a { color: white; text-decoration: none; margin: 0 0.5em; }
+  .hero { background: #e0e7ff url('hero-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #1e3a8a; }
+  .hero h1 { font-size: 2.5em; margin-bottom: 0.5em; }
+  .hero p { font-size: 1.2em; }
+  .hero .contact-btn { margin-top: 1em; padding: 0.5em 1em; background: #ef4444; color: white; text-decoration: none; border-radius: 5px; }
+  .hero .phone { font-size: 1.5em; margin-top: 0.5em; }
+  .services { padding: 2em; text-align: center; background: #f9fafb; }
+  .services h2 { margin-bottom: 1em; color: #1e3a8a; }
+  .service-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1em; padding: 0 1em; }
+  .service-item { padding: 1.5em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+  .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; }
+  .contact { background: #1e3a8a; color: white; padding: 2em; text-align: center; }
+  .contact h2 { margin-bottom: 1em; }
+  .contact form { max-width: 100%; margin: 0 1em; }
+  .contact input, .contact textarea { width: 100%; margin-bottom: 1em; padding: 0.5em; border: none; border-radius: 5px; }
+  .contact button { padding: 0.5em 1em; background: #ef4444; color: white; border: none; border-radius: 5px; cursor: pointer; }
+  .footer { background: #111827; color: white; padding: 1em 0; text-align: center; }
+  .footer a { color: #ef4444; text-decoration: none; margin: 0 0.5em; }
+  .honeypot { display: none; } /* Add this here for global hiding */
+        <input type="text" name="_gotcha" class="honeypot">
+
+  @media (max-width: 600px) {
+    .hero { height: 200px; }
+    .hero h1 { font-size: 1.5em; }
+    .hero p { font-size: 1em; }
+    .hero .phone { font-size: 1em; }
+    .service-grid { grid-template-columns: 1fr; padding: 0; }
+    header nav a { margin: 0 0.3em; }
+    .contact form { margin: 0; }
+  }
+</style>
 </head>
 <body>
   <header>
@@ -107,10 +110,27 @@
     <h2>Contact Us</h2>
     <p>Available 24/7 via Woova. Reach out for fast, reliable service!</p>
     <form>
-      <input type="text" placeholder="Name" required>
-      <input type="email" placeholder="Email" required>
-      <textarea placeholder="Message" rows="4" required></textarea>
-      <button type="submit">Send</button>
+    <form action="https://formspree.io/f/xzzavvpl/{your-form-id}" method="POST">
+  <label for="name">Name</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="message">Message</label>
+  <textarea id="message" name="message" rows="4" required></textarea>
+
+  <!-- Optional: Hidden field for email subject -->
+  <input type="hidden" name="_subject" value="New Contact Form Submission">
+
+  <!-- Optional: Honeypot for spam protection (hide with CSS: display: none;) -->
+  <input type="text" name="_gotcha" style="display: none;">
+
+  <!-- Optional: Redirect after submit -->
+  <input type="hidden" name="_next" value="https://www.sydneyelectricalpros.com.au/thanks.html">
+
+  <button type="submit">Send</button>
+</form>
     </form>
   </div>
   <div class="footer">
