--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <input type="text" name="_gotcha" class="honeypot">
       <button type="submit">Send</button>
     </form>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13244.827908510475!2d151.2065!3d-33.8688!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzPCsDUyJzA3LjciUyAxNTPCsDEyJzIzLjAiRQ!5e0!3m2!1sen!2sau!4v1696230000000!5m2!1sen!2sau" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!3m12!1m3!1d3312.887729394145!2d151.2068897152086!3d-33.867486980661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae401e0b7e3b%3A0x5c2d2f1a8e8e0b4c!2sSydney%20NSW%2C%20Australia!5e0!3m2!1sen!2sus!4v1696230000000!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
   <div class="footer">
     <p>&copy; 2025 Sydney Electrical Pros | <a href="#home">Home</a> | <a href="#services">Services</a> | <a href="#contact">Contact</a> | <a href="privacy.html">Privacy Policy</a></p>
