--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@
   </div>
   <div class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
-    <div class="testimonial-grid">
-      <div class="testimonial-item">"Great emergency service—fixed our outage fast!" - John D.</div>
-      <div class="testimonial-item">"Reliable and trusted pros." - Sarah L.</div>
-    </div>
+    <div data-shapo-widget="b9eaec5020c57516e67b"></div>
+    <script src="https://app.shapo.io/embed.js" async></script>
   </div>
   <div class="faq" id="faq">
     <h2>Frequently Asked Questions</h2>
