--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   </div>
   <div class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
-    <div data-shapo-widget="b9eaec5020c57516e67b"></div>
-    <script src="https://app.shapo.io/embed.js" async></script>
+    <div id="shapo-widget-b9eaec5020c57516e67b"></div>
+    <script id="shapo-embed-js" type="text/javascript" src="https://cdn.shapo.io/js/embed.js" defer></script>
   </div>
   <div class="faq" id="faq">
     <h2>Frequently Asked Questions</h2>
