--- a/index.html
+++ b/index.html
@@ -21,36 +21,36 @@
     header .logo { font-size: 1.5em; font-weight: bold; }
     header nav { margin-top: 0.5em; }
     header nav a { color: white; text-decoration: none; margin: 0 0.5em; }
-    .hero { background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), #e0e7ff url('hero-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #1e3a8a; }
+    .hero { background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), #e0e7ff url('hero-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #1e3a8a; animation: fadeIn 1s ease-in; }
     .hero h1 { font-size: 2.5em; margin-bottom: 0.5em; }
     .hero p { font-size: 1.2em; }
     .hero .contact-btn { margin-top: 1em; padding: 0.5em 1em; background: #ef4444; color: white; text-decoration: none; border-radius: 5px; }
     .hero .contact-btn:hover, button:hover { background: #dc2626; transition: background 0.3s; }
     .hero .phone { font-size: 1.5em; margin-top: 0.5em; }
-    .about { padding: 2em; text-align: center; background: #f9fafb; }
+    .about { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 0.5s forwards; opacity: 0; }
     .about h2 { margin-bottom: 1em; color: #1e3a8a; }
-    .services { padding: 2em; text-align: center; background: #f9fafb; }
+    .services { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1s forwards; opacity: 0; }
     .services h2 { margin-bottom: 1em; color: #1e3a8a; }
     .service-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1em; padding: 0 1em; }
     .service-item { padding: 1.5em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     .service-item:hover { transform: scale(1.05); transition: transform 0.3s; }
     .service-item i { font-size: 2em; color: #ef4444; margin-bottom: 0.5em; }
-    .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; loading: lazy; }
-    .testimonials { padding: 2em; text-align: center; background: #f9fafb; }
+    .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; loading: lazy; alt: "Emergency Repairs Image"; } /* Add alt text for SEO */
+    .testimonials { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1.5s forwards; opacity: 0; }
     .testimonial-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1em; }
     .testimonial-item { padding: 1em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-style: italic; }
-    .faq { padding: 2em; text-align: left; background: #f9fafb; }
+    .faq { padding: 2em; text-align: left; background: #f9fafb; animation: fadeIn 1s ease-in 2s forwards; opacity: 0; }
     .faq h2 { text-align: center; margin-bottom: 1em; color: #1e3a8a; }
     .faq-item { margin-bottom: 1em; }
     .faq-question { width: 100%; padding: 1em; background: #e0e7ff; border: none; cursor: pointer; text-align: left; }
     .faq-answer { padding: 1em; background: white; display: none; }
     .faq-item.active .faq-answer { display: block; }
-    .contact { background: #1e3a8a; color: white; padding: 2em; text-align: center; }
+    .contact { background: #1e3a8a; color: white; padding: 2em; text-align: center; animation: fadeIn 1s ease-in 2.5s forwards; opacity: 0; }
     .contact h2 { margin-bottom: 1em; }
     .contact form { max-width: 100%; margin: 0 1em; }
     .contact input, .contact textarea { width: 100%; margin-bottom: 1em; padding: 0.5em; border: none; border-radius: 5px; }
     .contact button { padding: 0.5em 1em; background: #ef4444; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    .footer { background: #111827; color: white; padding: 1em 0; text-align: center; }
+    .footer { background: #111827; color: white; padding: 1em 0; text-align: center; animation: fadeIn 1s ease-in 3s forwards; opacity: 0; }
     .footer a { color: #ef4444; text-decoration: none; margin: 0 0.5em; }
     .social { margin-top: 1em; }
     .social a { color: #ef4444; margin: 0 1em; font-size: 1.2em; }
@@ -65,7 +65,30 @@
       header nav a { margin: 0 0.3em; }
       .contact form { margin: 0; }
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
   </style>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Sydney Electrical Pros",
+      "telephone": "0477 947 895",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Sydney",
+        "addressRegion": "NSW",
+        "postalCode": "2000",
+        "streetAddress": "Sydney NSW"
+      },
+      "description": "24/7 Emergency Electrician in Sydney South West, Eastern Beaches & Inner City. Licensed, insured, residential & commercial via Woova.",
+      "openingHours": "24/7",
+      "image": "hero-bg.jpg"
+    }
+  </script>
 </head>
 <body>
   <header>
