--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .service-item { padding: 1.5em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     .service-item:hover { transform: scale(1.05); transition: transform 0.3s; }
     .service-item i { font-size: 2em; color: #ef4444; margin-bottom: 0.5em; }
-    .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; loading: lazy; alt: "Emergency Repairs Image"; } /* Add alt text for SEO */
+    .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; loading: lazy; }
     .testimonials { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1.5s forwards; opacity: 0; }
     .testimonial-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1em; }
     .testimonial-item { padding: 1em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-style: italic; }
@@ -110,7 +110,7 @@
   </div>
   <div class="about" id="about">
     <h2>About Us</h2>
-    <p>We are licensed and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
+    <p>We are licensed (251659C) and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
   </div>
   <div class="services" id="services">
     <h2>Our Services</h2>
@@ -134,7 +134,7 @@
     </div>
     <div class="faq-item">
       <button class="faq-question">Are you licensed and insured?</button>
-      <div class="faq-answer">Yes, fully licensed and insured for residential and commercial work.</div>
+      <div class="faq-answer">Yes, fully licensed (251659C) and insured for residential and commercial work.</div>
     </div>
   </div>
   <div class="contact" id="contact">
