--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
   <h1>Privacy Policy</h1>
   <p>At Sydney Electrical Pros, we respect your privacy. This policy explains how we collect, use, and protect your information.</p>
   <p>We collect personal data (e.g., name, email, phone) when you contact us via forms or calls, solely to respond to inquiries or provide services.</p>
-  <p>We do not share your data with third parties except as required by law or for service delivery (e.g., Woova platform).</p>
+  <p>We do not share your data with third parties except as required by law or for service delivery.</p>
   <p>You can request deletion of your data by contacting us at 0477 947 895.</p>
   <p>This policy may update; check back periodically.</p>
   <div class="footer">
