--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sydney Electrical Pros - 24/7 Emergency Electrician in Sydney South West, Eastern Beaches & Inner City. Licensed, insured, residential & commercial via Woova.">
-  <meta name="keywords" content="emergency electrician Sydney, electrical services, Woova electrician">
+  <meta name="keywords" content="emergency electrician Sydney, electrical services, electrician, electrician sydney">
   <meta property="og:title" content="Sydney Electrical Pros">
   <meta property="og:description" content="24/7 Emergency Electrician in Sydney">
   <meta property="og:image" content="hero-bg.jpg">
