--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
     <div class="faq-item">
       <button class="faq-question">What’s the next step? How do I get in touch?</button>
-      <div class="faq-answer">Call Woova at 0477 947 895, submit the contact form below, or book now for a free quote—we'll respond promptly.</div>
+      <div class="faq-answer">Call Woova at 0477 947 895, submit the contact form below, or call now for a free quote.</div>
     </div>
   </div>
   <div class="contact" id="contact">
