--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </div>
   <div class="about" id="about">
     <h2>About Us</h2>
-    <p>We are licensed and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
+    <p>We are licensed (251659C) and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
   </div>
   <div class="services" id="services">
     <h2>Our Services</h2>
@@ -150,7 +150,7 @@
     </div>
     <div class="faq-item">
       <button class="faq-question">What’s the next step? How do I get in touch?</button>
-      <div class="faq-answer">Call Woova at 0477 947 895, submit the contact form below, or call now for a free quote.</div>
+      <div class="faq-answer">Call Woova at 0477 947 895, submit the contact form below, or book now for a free quote—we'll respond promptly.</div>
     </div>
   </div>
   <div class="contact" id="contact">
