--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sydney Electrical Pros - 24/7 Emergency Electrician in Sydney South West, Eastern Beaches & Inner City. Licensed, insured, residential & commercial via Woova.">
-  <meta name="keywords" content="emergency electrician Sydney, electrical services, Woova electrician">
+  <meta name="description" content="Need an emergency electrician in Sydney? Sydney Electrical Pros offers 24/7 services, switchboard upgrades, rewiring, and more in South West, Eastern Beaches & Inner City. Licensed (251659C), insured. Call Woova at 0477 947 895.">
+  <meta name="keywords" content="emergency electrician Sydney, switchboard upgrade Sydney, electrician Sydney, electrical services Sydney, 24/7 electrician Sydney, Woova electrician">
   <meta property="og:title" content="Sydney Electrical Pros">
   <meta property="og:description" content="24/7 Emergency Electrician in Sydney">
   <meta property="og:image" content="hero-bg.jpg">
-  <title>Sydney Electrical Pros</title>
+  <title>Emergency Electrician Sydney | Switchboard Upgrade & Electrical Services | Sydney Electrical Pros</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" href="favicon.ico">
