--- a/index.html
+++ b/index.html
@@ -176,5 +176,14 @@
       button.addEventListener('click', () => button.parentElement.classList.toggle('active'));
     });
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQPPDEHBD0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZQPPDEHBD0');
+</script>
 </body>
 </html>
