--- a/index.html
+++ b/index.html
@@ -3,54 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Need an emergency electrician in Sydney? Sydney Electrical Pros offers 24/7 services, switchboard upgrades, rewiring, and more in South West, Eastern Beaches & Inner City. Licensed (251659C), insured. Call Woova at 0477 947 895.">
-  <meta name="keywords" content="emergency electrician Sydney, switchboard upgrade Sydney, electrician Sydney, electrical services Sydney, 24/7 electrician Sydney, Woova electrician">
+  <meta name="description" content="Sydney Electrical Pros - 24/7 Emergency Electrician in Sydney South West, Eastern Beaches & Inner City. Licensed, insured, residential & commercial via Woova.">
+  <meta name="keywords" content="emergency electrician Sydney, electrical services, Woova electrician">
   <meta property="og:title" content="Sydney Electrical Pros">
   <meta property="og:description" content="24/7 Emergency Electrician in Sydney">
   <meta property="og:image" content="hero-bg.jpg">
-  <title>Emergency Electrician Sydney | Switchboard Upgrade & Electrical Services | Sydney Electrical Pros</title>
+  <title>Sydney Electrical Pros</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" href="favicon.ico">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Roboto', sans-serif; line-height: 1.6; color: #333; }
-    h1, h2 { font-weight: 700; }
+    body { font-family: 'Roboto', sans-serif; line-height: 1.6; color: #001F3F; background-color: #f9fafb; } /* Navy text, light background */
+    h1, h2 { font-weight: 700; color: #001F3F; } /* Navy headers */
     p, a { font-weight: 400; }
     header { background: #FF9900; color: white; padding: 1em 0; text-align: center; position: sticky; top: 0; }
     header .logo { font-size: 1.5em; font-weight: bold; }
     header nav { margin-top: 0.5em; }
-    header nav a { color: white; text-decoration: none; margin: 0 0.5em; }
+    header nav a { color: white; text-decoration: none; margin: 0 0.5em; transition: color 0.3s; }
+    header nav a:hover { color: #001F3F; } /* Navy hover for links */
     .hero { background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), #e0e7ff url('hero-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #FF9900; animation: fadeIn 1s ease-in; }
-    .hero h1 { font-size: 2.5em; margin-bottom: 0.5em; }
-    .hero p { font-size: 1.2em; }
-    .hero .contact-btn { margin-top: 1em; padding: 0.5em 1em; background: #FF9900; color: white; text-decoration: none; border-radius: 5px; }
-    .hero .contact-btn:hover, button:hover { background: #dc2626; transition: background 0.3s; }
-    .hero .phone { font-size: 1.5em; margin-top: 0.5em; }
-    .about { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 0.5s forwards; opacity: 0; }
+    .hero h1 { font-size: 2.5em; margin-bottom: 0.5em; color: #fff; text-shadow: 1px 1px 2px #001F3F; } /* White text with navy shadow */
+    .hero p { font-size: 1.2em; color: #fff; text-shadow: 1px 1px 2px #001F3F; }
+    .hero .contact-btn { margin-top: 1em; padding: 0.5em 1em; background: #FF9900; color: white; text-decoration: none; border-radius: 5px; border: 2px solid #001F3F; } /* Orange button with navy border */
+    .hero .contact-btn:hover, button:hover { background: #001F3F; color: #FF9900; transition: all 0.3s; } /* Swap colors on hover */
+    .hero .phone { font-size: 1.5em; margin-top: 0.5em; color: #fff; text-shadow: 1px 1px 2px #001F3F; }
+    .about { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 0.5s forwards; opacity: 0; border-bottom: 1px solid #001F3F; } /* Navy border for section separation */
     .about h2 { margin-bottom: 1em; color: #FF9900; }
-    .services { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1s forwards; opacity: 0; }
+    .services { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1s forwards; opacity: 0; border-bottom: 1px solid #001F3F; }
     .services h2 { margin-bottom: 1em; color: #FF9900; }
     .service-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1em; padding: 0 1em; }
-    .service-item { padding: 1.5em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    .service-item { padding: 1.5em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,31,63,0.1); } /* Navy shadow */
     .service-item:hover { transform: scale(1.05); transition: transform 0.3s; }
     .service-item i { font-size: 2em; color: #FF9900; margin-bottom: 0.5em; }
     .service-item img { max-width: 100%; height: auto; margin-bottom: 1em; border-radius: 5px; loading: lazy; }
-    .testimonials { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1.5s forwards; opacity: 0; }
+    .testimonials { padding: 2em; text-align: center; background: #f9fafb; animation: fadeIn 1s ease-in 1.5s forwards; opacity: 0; border-bottom: 1px solid #001F3F; }
     .testimonial-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1em; }
-    .testimonial-item { padding: 1em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-style: italic; }
-    .faq { padding: 2em; text-align: left; background: #f9fafb; animation: fadeIn 1s ease-in 2s forwards; opacity: 0; }
+    .testimonial-item { padding: 1em; background: white; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,31,63,0.1); font-style: italic; }
+    .faq { padding: 2em; text-align: left; background: #f9fafb; animation: fadeIn 1s ease-in 2s forwards; opacity: 0; border-bottom: 1px solid #001F3F; }
     .faq h2 { text-align: center; margin-bottom: 1em; color: #FF9900; }
     .faq-item { margin-bottom: 1em; }
-    .faq-question { width: 100%; padding: 1em; background: #e0e7ff; border: none; cursor: pointer; text-align: left; }
+    .faq-question { width: 100%; padding: 1em; background: #e0e7ff; border: none; cursor: pointer; text-align: left; color: #001F3F; } /* Navy text for questions */
     .faq-answer { padding: 1em; background: white; display: none; }
     .faq-item.active .faq-answer { display: block; }
     .contact { background: #FF9900; color: white; padding: 2em; text-align: center; animation: fadeIn 1s ease-in 2.5s forwards; opacity: 0; }
     .contact h2 { margin-bottom: 1em; }
     .contact form { max-width: 100%; margin: 0 1em; }
     .contact input, .contact textarea { width: 100%; margin-bottom: 1em; padding: 0.5em; border: none; border-radius: 5px; }
-    .contact button { padding: 0.5em 1em; background: #FF9900; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    .footer { background: #111827; color: white; padding: 1em 0; text-align: center; animation: fadeIn 1s ease-in 3s forwards; opacity: 0; }
+    .contact button { padding: 0.5em 1em; background: #001F3F; color: #FF9900; border: none; border-radius: 5px; cursor: pointer; } /* Navy button with orange text */
+    .contact button:hover { background: #FF9900; color: #001F3F; }
+    .footer { background: #001F3F; color: white; padding: 1em 0; text-align: center; animation: fadeIn 1s ease-in 3s forwards; opacity: 0; }
     .footer a { color: #FF9900; text-decoration: none; margin: 0 0.5em; }
     .social { margin-top: 1em; }
     .social a { color: #FF9900; margin: 0 1em; font-size: 1.2em; }
@@ -176,14 +178,5 @@
       button.addEventListener('click', () => button.parentElement.classList.toggle('active'));
     });
   </script>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQPPDEHBD0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZQPPDEHBD0');
-</script>
 </body>
 </html>
