--- a/index.html
+++ b/index.html
@@ -114,15 +114,25 @@
     <h2>About Us</h2>
     <p>We are licensed (251659C) and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
   </div>
-  <div class="services" id="services">
-    <h2>Our Services</h2>
-    <div class="service-grid">
-      <div class="service-item"><i class="fas fa-bolt"></i><br>Emergency Repairs</div>
-      <div class="service-item"><i class="fas fa-tools"></i><br>Rewiring</div>
-      <div class="service-item"><i class="fas fa-shield-alt"></i><br>Safety Switch Installs</div>
-      <div class="service-item"><i class="fas fa-building"></i><br>Commercial Electrical</div>
-    </div>
+ <div class="services" id="services">
+  <h2>Our Services</h2>
+  <div class="service-grid">
+    <div class="service-item"><i class="fas fa-bolt"></i><br>Emergency Repairs</div>
+    <div class="service-item"><i class="fas fa-tools"></i><br>Rewiring</div>
+    <div class="service-item"><i class="fas fa-shield-alt"></i><br>Safety Switch Installs</div>
+    <div class="service-item"><i class="fas fa-building"></i><br>Commercial Electrical</div>
+    <div class="service-item"><i class="fas fa-charging-station"></i><br>EV Car Chargers</div>
+    <div class="service-item"><i class="fas fa-lightbulb"></i><br>Lighting / LED Downlights</div>
+    <div class="service-item"><i class="fas fa-shower"></i><br>Hot Water Repairs</div>
+    <div class="service-item"><i class="fas fa-plug"></i><br>Power Point Installations</div>
+    <div class="service-item"><i class="fas fa-exclamation-triangle"></i><br>Electrical Defect Notices</div>
+    <div class="service-item"><i class="fas fa-exclamation-circle"></i><br>Dangerous Live Wires</div>
+    <div class="service-item"><i class="fas fa-cable-car"></i><br>Recabling & Underground</div>
+    <div class="service-item"><i class="fas fa-bell"></i><br>Smoke Alarm Installation & Testing</div>
+    <div class="service-item"><i class="fas fa-snowflake"></i><br>Air Conditioning</div>
+    <div class="service-item"><i class="fas fa-solar-panel"></i><br>Solar Panels</div>
   </div>
+</div>
   <div class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
     <div id="shapo-widget-b9eaec5020c57516e67b"></div>
