--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h2>About Us</h2>
     <p>We are licensed (251659C) and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
   </div>
- <div class="services" id="services">
+<div class="services" id="services">
   <h2>Our Services</h2>
   <div class="service-grid">
     <div class="service-item"><i class="fas fa-bolt"></i><br>Emergency Repairs</div>
@@ -131,6 +131,8 @@
     <div class="service-item"><i class="fas fa-bell"></i><br>Smoke Alarm Installation & Testing</div>
     <div class="service-item"><i class="fas fa-snowflake"></i><br>Air Conditioning</div>
     <div class="service-item"><i class="fas fa-solar-panel"></i><br>Solar Panels</div>
+    <div class="service-item"><i class="fas fa-tag"></i><br>Test and Tagging</div>
+    <div class="service-item"><i class="fas fa-fan"></i><br>Ceiling Fan Installation</div>
   </div>
 </div>
   <div class="testimonials" id="testimonials">
