--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="service-item"><i class="fas fa-bell"></i><br>Smoke Alarm Installation & Testing</div>
     <div class="service-item"><i class="fas fa-snowflake"></i><br>Air Conditioning</div>
     <div class="service-item"><i class="fas fa-solar-panel"></i><br>Solar Panels</div>
-    <div class="service-item"><i class="fas fa-tag"></i><br>Test and Tagging</div>
+    <div class="service-item"><i class="fas fa-tag"></i><br>Test & Tagging</div>
     <div class="service-item"><i class="fas fa-fan"></i><br>Ceiling Fan Installation</div>
   </div>
 </div>
