--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     <div class="service-item"><i class="fas fa-network-wired"></i><br>Recabling & Underground</div>
     <div class="service-item"><i class="fas fa-bell"></i><br>Smoke Alarm Installation & Testing</div>
     <div class="service-item"><i class="fas fa-snowflake"></i><br>Air Conditioning</div>
-    <div class="service-item"><i class="fas fa-solar-panel"></i><br>Solar Panels</div>
     <div class="service-item"><i class="fas fa-tag"></i><br>Test & Tagging</div>
     <div class="service-item"><i class="fas fa-fan"></i><br>Ceiling Fan Installation</div>
+    <div class="service-item"><i class="fas fa-network-wired"></i><br>Data Cabling</div>
   </div>
 </div>
   <div class="testimonials" id="testimonials">
