--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
     <div class="service-item"><i class="fas fa-plug"></i><br>Power Point Installations</div>
     <div class="service-item"><i class="fas fa-exclamation-triangle"></i><br>Electrical Defect Notices</div>
     <div class="service-item"><i class="fas fa-exclamation-circle"></i><br>Dangerous Live Wires</div>
-    <div class="service-item"><i class="fas fa-network-wired"></i><br>Recabling & Underground</div>
+    <div class="service-item"><i class="fas fa-tools"></i><br>Recabling & Underground</div>
     <div class="service-item"><i class="fas fa-bell"></i><br>Smoke Alarm Installation & Testing</div>
     <div class="service-item"><i class="fas fa-snowflake"></i><br>Air Conditioning</div>
     <div class="service-item"><i class="fas fa-tag"></i><br>Test & Tagging</div>
     <div class="service-item"><i class="fas fa-fan"></i><br>Ceiling Fan Installation</div>
-    <div class="service-item"><i class="fas fa-network-wired"></i><br>Data Cabling</div>
+    <div class="service-item"><i class="fas fa-ethernet"></i><br>Data Cabling</div>
   </div>
 </div>
   <div class="testimonials" id="testimonials">
