--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
     <a href="#contact" class="contact-btn">Book Now</a>
     <div class="phone">Call: 0477 947 895</div>
   </div>
-  <div class="about" id="about">
-    <h2>About Us</h2>
-    <p>We are licensed (251659C) and insured electricians providing 24/7 emergency services across Sydney South West, Eastern Beaches, and Inner City. With years of experience, we specialize in residential and commercial work, ensuring efficiency and compliance.</p>
-  </div>
+<div class="about" id="about">
+  <h2>About Us</h2>
+  <p>We are Sydney Electrical Pros, a trusted team of licensed (251659C) and insured electricians dedicated to providing top-quality electrical services across Sydney South West, Eastern Beaches, and Inner City. With over 10 years of experience in the industry, we specialize in both residential and commercial work, including emergency repairs, rewiring, safety switch installs, and more. Our commitment to safety, efficiency, and customer satisfaction sets us apart—we use the latest tools and techniques to ensure every job is done right the first time. Whether it's a power outage at midnight or a full switchboard upgrade, we're available 24/7 via Woova at 0477 947 895. We pride ourselves on affordable pricing, quick response times, and compliance with all Australian standards, helping you save on energy bills while keeping your property safe.</p>
+</div>
 <div class="services" id="services">
   <h2>Our Services</h2>
   <div class="service-grid">
